<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- General -->
    <string name="try_again">Try again</string>
    <string name="something_went_wrong">Something went wrong.\nCheck your internet connection</string>
    <string name="empty_state">Looks like there\'s no content here…\nCheck back later!</string>
    <string name="no_browser_installed">No browser installed on the device</string>
    <string name="no_email_client_installed">No email client installed on the device</string>

    <!-- About -->
    <string name="about_title">About</string>
    <string name="about_text_1">What inspires you day to day? What kind of perceptions open you up to having new ideas?</string>
    <string name="about_text_2">The playfulness of textures, shapes and colors in our collections stimulate your creative self.</string>
    <string name="about_text_3">Our patterns, initially designed for bags and various other accessories are now available to use as wallpapers!</string>
    <string name="about_text_4">All pattern designs showcased in the app as well as the physical products are made with love in Cluj, Romania.</string>
    <string name="about_text_5">Török Patrícia-Ágnes</string>
    <string name="about_text_6">Designer</string>
    <string name="about_text_7">This mobile application was created by <b>Pandula Péter</b></string>
    <string name="about_text_8">Thanks for checking it out!</string>
    <string name="about_button_website">Visit our website</string>
    <string name="about_button_email">Drop us a line</string>
    <string name="about_button_facebook">Check us out on Facebook</string>
    <string name="about_button_instagram">Follow us on Instagram</string>
    <string name="about_button_google_play">Rate the app on Google Play</string>
    <string name="about_button_github">Check out the source code</string>
    <string name="about_button_privacy_policy">Read the privacy policy</string>
    <string name="about_button_bug_report">Report a bug</string>

    <!-- Collections -->
    <string name="collections_title">Collections</string>
    <string name="collections_welcome">Welcome</string>
    <string name="collections_welcome_message">Start swiping horizontally\nto explore the various collections</string>
    <string name="collections_previous">Previous</string>
    <string name="collections_next">Next</string>

    <!-- Wallpaper details -->
    <string name="wallpaper_details_set_wallpaper">Set wallpaper</string>
    <string name="wallpaper_details_apply_wallpaper">Apply wallpaper</string>
    <string name="wallpaper_details_apply_wallpaper_home_screen">Home screen</string>
    <string name="wallpaper_details_apply_wallpaper_lock_screen">Lock screen</string>
    <string name="wallpaper_details_apply_wallpaper_both">Both</string>
    <string name="wallpaper_details_cannot_set_wallpaper_apply">Something went wrong while applying the wallpaper</string>
    <string name="wallpaper_details_wallpaper_applied_successfully">Wallpaper applied successfully</string>

</resources>