<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/button_google_play"
            style="@style/AboutButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/about_button_google_play"
            app:drawableStartCompat="@drawable/ic_google_play"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/button_github"
            style="@style/AboutButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/about_button_github"
            app:drawableStartCompat="@drawable/ic_github"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/button_google_play" />

        <TextView
            android:id="@+id/button_privacy_policy"
            style="@style/AboutButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/about_button_privacy_policy"
            app:drawableStartCompat="@drawable/ic_privacy_policy"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/button_github" />

        <TextView
            android:id="@+id/button_bug_report"
            style="@style/AboutButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/about_button_bug_report"
            app:drawableStartCompat="@drawable/ic_bug_report"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/button_privacy_policy" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>